Fixed a missing comma in the composer.json.

--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         },
         {
             "name": "Aaron Schmied",
-            "homepage" : "https://github.com/aaronschmied"
+            "homepage" : "https://github.com/aaronschmied",
             "email": "aaron@pro-sales.ch"
         }
 	],
